--- a/PiniT/Views/Products/ManagerIndex.cshtml
+++ b/PiniT/Views/Products/ManagerIndex.cshtml
@@ -3,61 +3,63 @@
 @{
     ViewBag.Title = "Index";
 }
-    <div class="row mt-3 mb-1">
-        <div class="col-md-6 ">
-            <h2 class="a">Your Products</h2>
+    <div class="row">
+    
+        <h2 class="cold-md-6 text-center mx-auto">Your Products</h2>
 
-            <p>
+        @*<p>
                 @Html.ActionLink("Create New", "Create")
-            </p>
-        </div>
-
-        
-        <div class="col-md-6 mt-auto p-3 border rounded bg-light">
-            @using (Html.BeginForm("ManagerIndex", "Products", FormMethod.Get, new { id = "search-form" }))
-            {
-                <div id="filters" class="row">
-                    <div class="col-6 px-1">
-                        @Html.EditorFor(x => x.Search, new { htmlAttributes = new { @class = "form-control", placeholder = "Search by product name" } })
-                    </div>
-                    <div class="col-4 px-1">
-                        @Html.DropDownListFor(x => x.Category, (SelectList)ViewBag.Categories, "Category", new { @class = "form-control", id = "category" })
-                    </div>
-                    <div class="col-2 px-1">
-                        <button id="search" type="submit" class="btn btn-primary btn-block">Search</button>
-                    </div>
-                </div>
-            }
-        </div>
+            </p>*@
     </div>
+
+    <div class="row">
+    <div class="col-md-6 mt-auto p-3 border rounded bg-light mx-auto mt-2">
+        @using (Html.BeginForm("ManagerIndex", "Products", FormMethod.Get, new { id = "search-form" }))
+        {
+            <div id="filters" class="row">
+                <div class="col-6 px-1">
+                    @Html.EditorFor(x => x.Search, new { htmlAttributes = new { @class = "form-control", placeholder = "Search by product name" } })
+                </div>
+                <div class="col-4 px-1">
+                    @Html.DropDownListFor(x => x.Category, (SelectList)ViewBag.Categories, "Category", new { @class = "form-control", id = "category" })
+                </div>
+                <div class="col-2 px-1">
+                    <button id="search" type="submit" class="btn btn-primary btn-block">Search</button>
+                </div>
+            </div>
+        }
+    </div>
+</div>
 <div id="customer-menu">
     <div class="row">
         @foreach (var category in Model.Categories.Reverse())
         {
             if (Model.Products.Any(x => x.CategoryId == category.Name))
             {
-
-
-            <div class="col-sm-2"></div>
-            <div class=" col-sm-8 rounded shadow-lg mx-auto mt-3 mb-1 text-center">
-                <h3 class="h3">@category.Name</h3>
-                @foreach (var product in Model.Products)
-                {
-                    if (product.CategoryId == category.Name)
+                <div class="col-sm-2"></div>
+                <div class=" col-sm-8 rounded shadow-lg mx-auto mt-3 mb-1 text-center">
+                    <h3 class="font-italic border-bottom mt-1">@category.Name</h3>
+                    @foreach (var product in Model.Products)
                     {
-                        <p class="h5">@product.Name - @product.Price</p>
-                        <p class="font-weight-lighter">@product.Description</p>
+                        if (product.CategoryId == category.Name)
+                        {
+                            <p class="h5">@product.Name - @product.Price</p>
+                            <p class="font-weight-lighter mb-1">@product.Description</p>
+                            <i class="fas fa-spinner fa-pulse">
+                                @Html.ActionLink("Edit", "Edit", new { id = product.ProductId }, new { @class = "fas fa-pencil-alt mb-2 " }) |</i>
+                            @Html.ActionLink("Delete", "Delete", new { id = product.ProductId }, new { @class = "glyphicon glyphicon-trash" })
+                        }
                     }
-                }
-            </div>
-            <div class="col-sm-2"></div>
+                </div>
+                <div class="col-sm-2"></div>
             }
         }
     </div>
 </div>
 
 
-<table class="table">
+
+@*<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(x => x.Product.Name)
@@ -89,16 +91,11 @@
             <td>
                 @Html.DisplayFor(modelItem => product.Price)
             </td>
-            <td>
-                
-                <i class="fas fa-spinner fa-pulse">
-                    @Html.ActionLink("Edit", "Edit", new { id = product.ProductId }, new { @class = "fas fa-pencil-alt" }) |</i>
-                                @Html.ActionLink("Delete", "Delete", new { id = product.ProductId }, new { @class = "glyphicon glyphicon-trash" })
-</td>
+            <td></td>
         </tr>
     }
 
-</table>
+</table>*@
 
 @section scripts{
     <script>
