--- a/PiniT/Views/Restaurants/CustomerIndex.cshtml
+++ b/PiniT/Views/Restaurants/CustomerIndex.cshtml
@@ -31,7 +31,7 @@
 <div class="row">
     @foreach (var restaurant in Model.Restaurants)
     {
-        <div class="col-md-3 card shadow border border-dark p-0 mx-1 mb-3">
+        <div class="col-md-3 col-sm-6 col-12 card shadow p-0">
             <div class="card-header border-dark font-weight-bolder bg-secondary text-white text-center">
                 <p class="m-0 font-italic font-weight-bolder">@restaurant.CompanyName</p>
             </div>
