--- a/PiniT/Views/Products/ManagerIndex.cshtml
+++ b/PiniT/Views/Products/ManagerIndex.cshtml
@@ -8,8 +8,8 @@
         <h2 class="cold-md-6 text-center mx-auto">Your Products</h2>
 
         <p>
-                @Html.ActionLink("Create New", "Create")
-            </p>
+           @Html.ActionLink("Create New", "Create",null, new { @class = "nav-link btn btn-dark text-left far fa-plus-square" })
+        </p>
     </div>
 
     <div class="row">
