Added AccountWallets Added Reservation CheckBox Validation Admin now can Assign Role to Managers Managers now come with no Role until admin Authorize them Reservations Finished

--- a/PiniT/Views/Admin/ManagersIndex.cshtml
+++ b/PiniT/Views/Admin/ManagersIndex.cshtml
@@ -63,7 +63,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "EditManager", new { id=item.Id }) |
-            @Html.ActionLink("Authorize", "ToggleAuthorize", new { id=item.Id }) |
+            @Html.ActionLink("Authorize", "AssignRoleManager", new { id=item.Id }) |
             @Html.ActionLink("Delete", "DeleteManager", new { id=item.Id })
         </td>
     </tr>
