--- a/PiniT/Views/Restaurants/CustomerIndex.cshtml
+++ b/PiniT/Views/Restaurants/CustomerIndex.cshtml
@@ -70,33 +70,34 @@
     <script>
         $(document).ready(() => {
             let chat = $.connection.piniTHub;
-
+            const categoryDropdown = document.getElementById('restType');
+            const searchForm = document.getElementById('search-form');
+            categoryDropdown.oninput = (e) => {
+                searchForm.submit();
+            };
             $('.restaurant-chat').click((e) => {
 
                 $(`#chat`).html('');
-                $('#chat').append(`
-                                            <div class="row">
-                                                <div class="card shadow-lg border border-success p-0 fixed-bottom alert alert-dismissible fade show ml-auto" role="alert" style="width:250px;">
-                                                    <div class="card-header border-dark font-weight-bolder bg-success text-white text-center">
-                                                        <div class="row">
-                                                            <p class="col-10 mb-0 mr-auto ml-2">${e.target.getAttribute('data-company')}</p>
-                                                            <button type="button" class="close col-2 ml-auto mr-1" data-dismiss="alert" aria-label="Close">
-                                                                <span aria-hidden="true">&times;</span>
-                                                            </button>
-                                                        </div>
-                                                    </div>
-                                                    <div class="card-body bg-light border-success">
-                                                        <div id="messages" class="overflow-auto" style="height:120px"></div>
-                                                         <br/>
-                                                        <input id="message" class="form-control border border-success">
-                                                        <button id="send" class="btn btn-success mt-1 mx-auto" type="button" aria-expanded="false">
-                                                            Send
-                                                        </button>
-
-
-                                                    </div>
+                $('#chat').append(`<div class="row">
+                                        <div class="card shadow-lg border border-success p-0 fixed-bottom alert alert-dismissible fade show ml-auto" role="alert" style="width:250px;">
+                                            <div class="card-header border-dark font-weight-bolder bg-success text-white text-center">
+                                                <div class="row">
+                                                    <p class="col-10 mb-0 mr-auto ml-2">${e.target.getAttribute('data-company')}</p>
+                                                    <button type="button" class="close col-2 ml-auto mr-1" data-dismiss="alert" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
                                                 </div>
-                                            </div>`);
+                                            </div>
+                                            <div class="card-body bg-light border-success">
+                                                <div id="messages" class="overflow-auto" style="height:120px"></div>
+                                                    <br/>
+                                                <input id="message" class="form-control border border-success">
+                                                <button id="send" class="btn btn-success mt-1 mx-auto" type="button" aria-expanded="false">
+                                                    Send
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>`);
 
                 $.connection.hub.start().done(() => {
 
@@ -110,18 +111,9 @@
                 });
 
             });
+
+
         });
-
-        window.onload = () => {
-            const categoryDropdown = document.getElementById('restType');
-            const searchForm = document.getElementById('search-form');
-            let searchButton = document.getElementById('search');
-
-            categoryDropdown.oninput = (e) => {
-                searchForm.submit();
-            };
-        };
-
 
     </script>
 
