--- a/PiniT/Views/Shared/_LoginPartial.cshtml
+++ b/PiniT/Views/Shared/_LoginPartial.cshtml
@@ -5,12 +5,21 @@
     {
         @Html.AntiForgeryToken()
 
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
-            </li>
-            <li class="nav-item"><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-        </ul>
+    <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+            <i class="nav-link far fa-question-circle m-1" href="#" id="navbardrop" data-toggle="dropdown">
+
+            </i>
+            <div class="dropdown-menu bg-dark">
+                <a class="">@Html.ActionLink("  How to Use", "About", "Home", null, new { @class = "nav-link btn btn-dark far fa-keyboard" })</a>
+                <a class="">@Html.ActionLink("  Contact", "Contact", "Home", null, new { @class = "nav-link btn btn-dark far fa-envelope" })</a>
+            </div>
+        </li>
+        <li class="nav-item">
+            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
+        </li>
+        <li class="nav-item"><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+    </ul>
     }
 }
 else
