--- a/PiniT/Content/Site.css
+++ b/PiniT/Content/Site.css
@@ -1,5 +1,7 @@
 ﻿body {
     background-color: rgba(179, 237, 241, 0.3);
+    /*background-image: url("https://lonelyplanetimages.imgix.net/copilot/images/interest/food-and-drink.jpg?auto=compress&h=800");
+    background-size: cover;*/
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -39,10 +41,4 @@ h3.a {
     margin-left: 160px;
     margin-bottom:10px;
     margin-top:5px;
-}
-
-footer .glyphicon {
-    font-size: 20px;
-    margin-bottom: 20px;
-    color: #f4511e;
 }
