--- a/PiniT/Views/Products/Delete.cshtml
+++ b/PiniT/Views/Products/Delete.cshtml
@@ -4,13 +4,12 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 class="mx-auto mb-2 mt-2 text-center a">Delete Product</h2>
+<hr />
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="dl-horizontal">
+
+<div class="col-md-6 col-8 shadow-lg container border border-white bg-white text-center mx-auto">
+    <dl class="dl-horizontal font-italic">
         <dt>
             @Html.DisplayNameFor(model => model.Category.Name)
         </dt>
@@ -44,7 +43,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
