restaurants/login partial

--- a/PiniT/Views/Restaurants/CustomerIndex.cshtml
+++ b/PiniT/Views/Restaurants/CustomerIndex.cshtml
@@ -4,6 +4,18 @@
     ViewBag.Title = "CustomerIndex";
 }
 
+    <style>
+        body {
+            /*background-image: url("/Content/Images/usreIndex.jpg");*/
+            background-image: url("https://as2.ftcdn.net/jpg/02/56/04/19/500_F_256041907_eWiahJpwVZG5rjyrGX8w42l2K2ZVSXyx.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            image-resolution:2000dpi;
+            opacity:0.9;
+            /*background-repeat: no-repeat;
+            background-size: auto;*/
+        }
+    </style>
 <br>
 
 <h2 class="a  mx-auto text-center">Available Restaurants</h2>
