--- a/PiniT/Views/Tables/ManagerIndex.cshtml
+++ b/PiniT/Views/Tables/ManagerIndex.cshtml
@@ -3,8 +3,14 @@
 @{
     ViewBag.Title = "Index";
 }
+<style>
+   #container{
+       background-image: url("");
+       background
+   }
+</style>
 
-<div class="card bg-white col-md-6 mx-auto">
+<div id="container" class="card bg-white col-md-6 mx-auto">
     <h2 class="text-center mx-auto">Table Layout</h2>
 
     <p>
