--- a/PiniT/Views/Shared/_LoginPartial.cshtml
+++ b/PiniT/Views/Shared/_LoginPartial.cshtml
@@ -10,9 +10,9 @@
             <i class="nav-link far fa-question-circle m-1" href="#" id="navbardrop" data-toggle="dropdown">
 
             </i>
-            <div class="dropdown-menu bg-dark">
-                <a class="">@Html.ActionLink("  How to Use", "About", "Home", null, new { @class = "nav-link btn btn-dark far fa-keyboard" })</a>
-                <a class="">@Html.ActionLink("  Contact", "Contact", "Home", null, new { @class = "nav-link btn btn-dark far fa-envelope" })</a>
+            <div class="dropdown-menu bg-danger mt-2">
+                <a class="">@Html.ActionLink("  How to Use", "About", "Home", null, new { @class = "nav-link col-md-12 text-left btn btn-danger far fa-keyboard" })</a>
+                <a class="">@Html.ActionLink("  Contact", "Contact", "Home", null, new { @class = "nav-link col-md-12 text-left btn btn-danger far fa-envelope" })</a>
             </div>
         </li>
         <li class="nav-item">
@@ -29,9 +29,9 @@ else
         <i class="nav-link far fa-question-circle m-1" href="#" id="navbardrop" data-toggle="dropdown">
            
         </i>
-        <div class="dropdown-menu bg-dark">
-            <a class="">@Html.ActionLink("  How to Use", "About", "Home", null, new { @class = "nav-link btn btn-dark far fa-keyboard" })</a>
-            <a class="">@Html.ActionLink("  Contact", "Contact", "Home", null, new { @class = "nav-link btn btn-dark far fa-envelope" })</a>
+        <div class="dropdown-menu bg-danger mt-2">
+            <a class="">@Html.ActionLink("  How to Use", "About", "Home", null, new { @class = "nav-link col-md-12 text-left btn btn-danger far fa-keyboard" })</a>
+            <a class="">@Html.ActionLink("  Contact", "Contact", "Home", null, new { @class = "nav-link col-md-12 text-left btn btn-danger far fa-envelope" })</a>
         </div>
     </li>
     <li class="nav-item">@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "nav-link" })</li>
